Students CRUD updated

--- a/BACKEND/CRUD/CRUD/appsettings.json
+++ b/BACKEND/CRUD/CRUD/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CRUDCS": "Server=DESKTOP-M2ACVFQ;Database=STUDENTS;Trusted_Connection=True;TrustServerCertificate=True"
+    "CRUDCS": "Server=DESKTOP-Q58APCV;Database=STUDENTS;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
